--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Citc</h1>
+        <h1 class="header">Cluster in the Cloud</h1>
         <p class="header"></p>
 
         <ul>
